# sweet-home

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
server/: main.py  pyproject.toml
server/src/models/: comprovante_model.py  user_model.py
server/src/routes/: auth.py  keys.py  sales.py
server/src/services/: auth_service.py  comprovante_service.py  firebase_auth_service.py  generate_pdf.py  key_service.py  register_service.py
server/src/utils/: crypto.py  logger.py  logging_config.py  read_bytes.py  utils.py
src/: App.jsx  firebaseConfig.js  index.css  main.jsx
src/components/: DataManagementModal.jsx  EmptyState.jsx  ErrorBoundary.jsx  Footer.jsx  Header.jsx  IngredientCard.jsx  KitchenwareCard.jsx  LazyImage.jsx  LoadingPage.jsx  OfflineIndicator.jsx  Pagination.jsx  PasswordStrengthMeter.jsx  SweetCard.jsx  VirtualGrid.jsx
src/components/modals/: ObservationsModal.jsx  QRCodeModal.jsx  (+1 more)
src/constants/: authConfig.js  firebaseCollections.js
src/hooks/: useFirestore.js  usePagination.js  useToast.js
src/pages/: Dashboard.jsx  FinancePage.jsx  IngredientForm.jsx  KitchenwareForm.jsx  Login.jsx  PDVPage.jsx  Register.jsx  ReportsPage.jsx  SweetForm.jsx
src/services/: authService.js  cacheService.js  costCalculationService.js  csvService.js  firestoreService.js  offlineCacheService.js  offlineStorageService.js  pdvApiService.js  reportsService.js  salesService.js
src/styles/: global.css
src/utils/: cleanInvalidData.js  imageCompressor.js  logger.js  passwordStrength.js  sanitizer.js  validators.js
